| Bug #11688 | Client outputs garbage between resultsets when running multi-statement query | ||
|---|---|---|---|
| Submitted: | 1 Jul 2005 14:32 | Modified: | 17 Aug 2005 20:05 |
| Reporter: | Sergey Petrunia | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.1 | OS: | Any (*) |
| Assigned to: | Jim Winstead | Target Version: | |
[1 Jul 2005 14:32]
Sergey Petrunia
[1 Jul 2005 14:57]
Aleksey Kishkin
tested on windows, mysql 5.0.7, got the garbage as well +------+ | i | +------+ | 2 | +------+ 1 row in set (0.06 sec) t☻t1☻t1☺i☺i♀? +------+ | i | +------+ | 3 | +------+ 1 row in set (0.06 sec) t☻t1☻t1☺i☺i♀?
[4 Jul 2005 10:41]
Sergey Petrunia
There are chances that fix for this bug will have some intersection with BUG#9814
[4 Jul 2005 21:41]
Sergey Petrunia
Please disregard the previous comment, that bug turned out to be unrelated.
[6 Aug 2005 2:58]
Jim Winstead
Happens in 4.1, too. The data returned by mysql_info() appears to be getting handled incorrectly.
[11 Aug 2005 3:31]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/28139
[16 Aug 2005 0:23]
Jim Winstead
Fixed in 4.1.14 and 5.0.12.
[17 Aug 2005 20:05]
Paul DuBois
Noted in 4.1.14, 5.0.12 changelogs.
