Fix mysql_info() returning bad data in the results of a multi-statement query that mixed statements that do and do not return info. (Bug #11688)

mysql-test/r/metadata.result:
  Add new results
mysql-test/t/metadata.test:
  Add new regression test
sql-common/client.c:
  Clear mysql->info in free_old_query()