sql-common/client.c
@@ -713,8 +713,9 @@ void free_old_query(MYSQL *mysql)
   if (mysql->fields)
     free_root(&mysql->field_alloc,MYF(0));
   init_alloc_root(&mysql->field_alloc,8192,0); /* Assume rowlength < 8192 */
-  mysql->fields=0;
-  mysql->field_count=0;				/* For API */
+  mysql->fields= 0;
+  mysql->field_count= 0;			/* For API */
+  mysql->info= 0;
   DBUG_VOID_RETURN;
 }
 
